feat: finish docs tab on graphi-ql page

--- a/src/components/GraphiQlDocs/GraphiQlDocs.css
+++ b/src/components/GraphiQlDocs/GraphiQlDocs.css
@@ -2,6 +2,10 @@
   color: hsl(219, 61%, 61%);
 }
 
+.blue-text {
+  color: hsl(219, 61%, 61%);
+}
+
 .gray-text {
   color: hsl(219, 28%, 32%, .76);
 }
