--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,5 @@
 .header {
-  @apply sticky transition-all flex justify-center sm:justify-end z-10 top-0 p-2 space-x-3 sm:space-x-4 bg-slate-200 dark:bg-slate-800;
+  @apply sticky transition-all flex justify-center sm:justify-between z-10 top-0 p-2 space-x-3 sm:space-x-4 bg-slate-200 dark:bg-slate-800;
 }
 
 .button {
