feat: create main page
* feat: create Headers editor

* feat: create general purpose editor

* feat: create main page

* fix: responsive styles

* Delete GraphQLPage.tsx

This file was incorrectly resolved during the merge conflict

* feat: improve Lighthouse score

* feat: adopt GraphiQlSpace to GraphiQl page

* fix: private routes

--- a/src/components/GraphiQlDocs/GraphiQlDocs.css
+++ b/src/components/GraphiQlDocs/GraphiQlDocs.css
@@ -7,7 +7,7 @@
 }
 
 .gray-text {
-  color: hsl(219, 28%, 32%, .76);
+  color: hsl(219, 28%, 32%, 0.76);
 }
 
 .red-text {
@@ -18,7 +18,15 @@
   color: hsl(40, 100%, 46%);
 }
 
-.docs .queryType:hover, .docs .yellow-text:hover, .docs .gray-text.back:hover {
-cursor: pointer;
-text-decoration: underline;
+@media (prefers-color-scheme: dark) {
+  .gray-text {
+    color: hsl(219, 35%, 57%);
+  }
+}
+
+.docs .queryType:hover,
+.docs .yellow-text:hover,
+.docs .gray-text.back:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
